# tic_tac_toe_ai

./: CMakeLists.txt  Makefile  README.md  TicTacToeAI  TicTacToeAIConsole  TicTacToeAIConsoleRun  main.ccp  my_app
docs/: AI_Design.md  Architecture.md  UML_Diagram.txt
src/: main.ccp  main.cpp
src/ai/: AIEngine.cpp  AIEngine.h  AIStrategy.cpp  AIStrategy.h  Heuristics.cpp  Heuristics.h  Minimax.cpp  Minimax.h  MoveEvaluator.cpp  MoveEvaluator.h
src/board/: BoardGenerator.cpp  BoardGenerator.h  BoardModel.cpp  BoardModel.h  CellModel.h
src/dashboard/: Dashboard.cpp  Dashboard.h  GameSettings.cpp  GameSettings.h
src/game/: GameController.cpp  GameController.h  GameState.cpp  GameState.h  ReplayManager.cpp  ReplayManager.h  ResultEvaluator.cpp  ResultEvaluator.h  TournamentManager.cpp  TournamentManager.h  TurnManager.cpp  TurnManager.h
src/rules/: DrawChecker.cpp  DrawChecker.h  MoveValidator.cpp  MoveValidator.h  WinChecker.cpp  WinChecker.h
src/ui_qt/: BoardWidget.cpp  BoardWidget.h  CellButton.cpp  CellButton.h  GameDialog.cpp  GameDialog.h  MainWindow.cpp  MainWindow.h
src/utils/: Constants.h  Enums.h  Helpers.h
